manifests/cluster-addons/media/prowlarr/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
        - matchLabels:
            app.kubernetes.io/name: lidarr
    - toPorts:
        - ports:
            - port: '9696'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: '7878'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: '8989'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: lidarr
      toPorts:
        - ports:
            - port: '8686'
              protocol: TCP

    - toFQDNs:
        - matchName: 'prowlarr.servarr.com'
        - matchName: 'indexers.prowlarr.com'
        - matchName: 'api.nzbgeek.info'
        - matchName: 'api.nzb.life'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
